--- a/src/modules/posts/post1.mdx
+++ b/src/modules/posts/post1.mdx
@@ -1,1 +1,11 @@
-# Post 1
+import Navbar from "../components/Navbar";
+
+<div className="w-full">
+    <Navbar />
+    <div className="block pt-6">
+        <div className="prose dark:prose-invert">
+            ## Post 1
+
+        </div>
+    </div>
+</div>
