--- a/src/modules/posts/post2.mdx
+++ b/src/modules/posts/post2.mdx
@@ -1,1 +1,10 @@
-# Post 2
+import Navbar from "../components/Navbar";
+
+<div className="w-full">
+    <Navbar />
+    <div className="block pt-6">
+        <div className="prose dark:prose-invert">
+            ## Post 2
+        </div>
+    </div>
+</div>
